<!--
  ~ Copyright (c) ASO 2020.
  -->

<resources>
    <string name="app_name">SeNote</string>
    <string name="write_the_note_content">Write the Note Content</string>

    <string name="toolbar_placement_top">Toolbar at top</string>
    <string name="toolbar_placement_bottom">Toolbar at bottom</string>

    <string name="toolbar_appearance_inline">Toolbar inline</string>
    <string name="toolbar_appearance_grouped">Toolbar grouped</string>

    <string name="add_html_from_web_page">Add HTML from web page</string>

    <string name="dark_theme">Dark theme</string>

    <string name="dialog_add_html_from_web_page_url_label">Web site address</string>
    <string name="dialog_add_html_from_web_page_url_hint">http://</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>


    <!-- editor toolbar dialog -->
    <string name="dialog_btn_insert">Insert</string>

    <!-- insert link -->
    <string name="dialog_title_insert_link">Insert link</string>
    <string name="dialog_et_hint_link_display_text">Display text (Default: Link)</string>
    <string name="dialog_et_hint_link_content">Link</string>

    <!-- insert image -->
    <string name="dialog_item_text_local_image">Local</string>
    <string name="dialog_item_text_internet_image">Internet</string>
    <string name="dialog_title_insert_image">Insert image</string>
    <string name="dialog_et_hint_image_display_text">Display text (Default: Image)</string>
    <string name="dialog_et_hint_image_uri">Image link</string>

    <!-- insert block code -->
    <string name="editor_dialog_title_insert_block_code">Insert block code</string>
    <string name="dialog_et_hint_language_name">Language</string>

    <!-- clear all -->
    <string name="toast_content_empty">Content is empty</string>
    <string name="dialog_message_clear_all">Are you sure to clear all?</string>

    <string name="toast_message_deleted">Deleted</string>
    <string name="toast_message_delete_error">File deletion failed</string>
    <string name="toast_message_cleared">The content has been cleared</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="line_spacing">Line Spacing (Default: 6)</string>
    <string name="paragraph_spacing">Paragraph Spacing (Default: 16)</string>
    <string name="start_margin">Left Margin (Default: 14)</string>
    <string name="end_margin">Right Margin (Default: 12)</string>
    <string name="title">Title</string>
    <string name="change_paper">Change Paper</string>
    <string name="share">Share</string>
    <string name="preferences">Preferences</string>
    <string name="start_write_some_content_here">Start write some content here…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="add_notebook">Add Notebook</string>
    <string name="PREFERENCES_FILE_KEY">SeNotePreferences</string>
    <string name="add_voice_note">Voice Note</string>
    <string name="add_picture">Picture</string>
    <string name="add_todo_list">ToDo List</string>
    <string name="hand_writing">Hand Writing</string>
    <string name="attach_file">Attach File</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="more">More</string>
    <string name="add_star">Add Star</string>
    <string name="remove_star">Remove Star</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="lists_preferences">Lists Preferences</string>
    <string name="inter_the_name_of_the_notebook">Inter the name of the Notebook</string>
    <string name="untitled">Untitled</string>
    <string name="empty_note_message">Notes  cannot be empty</string>
    <string name="text_size">Text Size (Default: 14)</string>
    <string name="add_text_note">Text</string>

    <!--Quotations for empty notebooks-->
    <string name="a">\"From small beginnings come great things. \"</string>
    <string name="b">\"Whether you succeed or not is irrelevant, there is no such thing.\n Making your unknown known is the important thing.\"\n \n Georgia O\'Keeffe</string>
    <string name="c">\"It is never too late to be what you might have been. \"\n\n George Eliot</string>
    <string name="d">\"Somewhere, something incredible is waiting to be known.\" \n\nCarl Sagan</string>
    <string name="e">\"It\'s so fine and yet so terrible to stand in front of a blank canvas. \"\n\n Paul Cezanne</string>
    <string name="f">\"Strive not to be a success, but rather to be of value.\" \n\nAlbert Einstein</string>
    <string name="g">\"Life is the art of drawing without an eraser.\" \n\nJohn W. Gardner</string>


</resources>
