<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) ASO 2020.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_note_edit"
        android:title="@string/edit"
        android:orderInCategory="1"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_note_save"
        android:title="@string/save"
        android:orderInCategory="1"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:orderInCategory="3"
        android:title="@string/more"
        android:visible="true"
        app:showAsAction="always" />
</menu>