<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) ASO 2020.
  -->
<layout>

    <data>

        <import type="com.aso.senote.ui.fragments.homeScreen.HomeScreenViewModel.Companion.Type" />

        <variable
            name="viewModel"
            type="com.aso.senote.ui.fragments.homeScreen.HomeScreenViewModel" />

        <variable
            name="type"
            type="Type" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/add_backdrop"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="#00000000"
        tools:showIn="@layout/activity_main">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:gravity="start|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="@{() -> viewModel.insert(1)}"
            android:text="@string/attach_file"
            android:textAllCaps="false"
            app:backgroundTint="#00000000"
            app:icon="@drawable/ic_action_attach_file"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00000000"
            android:gravity="start|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="@{() -> viewModel.insert(2)}"
            android:text="@string/add_text_note"
            android:textAllCaps="false"
            app:icon="@drawable/ic_note_add_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00000000"
            android:gravity="start|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"

            android:onClick="@{() -> viewModel.insert(3)}"
            android:text="@string/add_todo_list"
            android:textAllCaps="false"
            app:icon="@drawable/ic_action_add_todo_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:rippleColor="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/button8"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00000000"
            android:gravity="start|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="@{() -> viewModel.insert(5)}"
            android:text="@string/add_voice_note"
            android:textAllCaps="false"
            app:icon="@drawable/ic_action_add_voice_note"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/button6"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00000000"
            android:gravity="start|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"

            android:onClick="@{() -> viewModel.insert(4)}"
            android:text="@string/add_picture"
            android:textAllCaps="false"
            app:icon="@drawable/ic_action_add_photo"
            app:layout_constraintBottom_toTopOf="@+id/button8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4"
            app:rippleColor="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/button4"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00000000"
            android:gravity="start|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="@{() -> viewModel.insert(6)}"
            android:text="@string/hand_writing"
            android:textAllCaps="false"
            app:icon="@drawable/ic_action_draw_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button7"
            app:rippleColor="@color/colorPrimary" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>