<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) ASO 2020.
  -->
<layout>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/note_fragment_preferences"
    android:layout_width="match_parent"
    android:layout_height="360dp"
    android:scrollbars="none"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSurface"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="80dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/line_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <SeekBar
            android:id="@+id/line_spacing_setter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="32"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:progress="6" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/start_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <SeekBar
            android:id="@+id/left_margin_spacing_setter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="36"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:progress="14" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/end_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <SeekBar
            android:id="@+id/right_margin_spacing_setter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="36"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:progress="12" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
</layout>
